test/field/get_on_bool.lox
true.foo // error: only instances have fields
